fixed test compile errors